--- a/plot.ipynb
+++ b/plot.ipynb
@@ -1,15 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "id": "e5a9bb11",
    "metadata": {
     "vscode": {
-     "languageId": "yaml"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
     "---\n",
     "title: Plotly example\n",
